--- a/sancus.css
+++ b/sancus.css
@@ -20,6 +20,11 @@ h3
     padding-top: 40px;
 }
 
+.section-header img
+{
+    vertical-align: baseline;
+}
+
 .subsection-header
 {
     padding-top: 10px;
